webpack config walk-around

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,26 @@
     <title>weatherWebApp</title>
   </head>
   <body>
-    <h1>weatherWebApp</h1>
+    <div class="container">
+      <form action="">
+        <input type="text" placeholder="search location.." />
+      </form>
+      <div class="display">
+        <div class="location">
+          <div class="city">TOKYO</div>
+          <div class="details">Clear & Sunny</div>
+        </div>
+        <div class="main">
+          <div class="left">
+            <img id="sun" />
+          </div>
+          <div class="right">
+            <div class="temperature">18°C</div>
+            <div class="humidity">68% humidity</div>
+            <div class="wind">2km/h wind</div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
