fetch the weather and link it to the DOM

--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,22 @@
   </head>
   <body>
     <div class="container">
-      <form action="">
+      <form id="search">
         <input type="text" placeholder="search location.." />
       </form>
       <div class="display">
         <div class="location">
-          <div class="city">TOKYO</div>
-          <div class="details">Clear & Sunny</div>
+          <div class="city"></div>
+          <div class="details"></div>
         </div>
         <div class="main">
           <div class="left">
-            <img id="sun" />
+            <img class="image" />
           </div>
           <div class="right">
-            <div class="temperature">18°C</div>
-            <div class="humidity">68% humidity</div>
-            <div class="wind">2km/h wind</div>
+            <div class="temperature">°C</div>
+            <div class="humidity">humidity</div>
+            <div class="wind">wind</div>
           </div>
         </div>
       </div>
