add search button,

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <div class="container">
       <form id="search">
         <input type="text" placeholder="search location.." />
+        <button type="submit">search</button>
       </form>
       <div class="display">
         <div class="location">
@@ -20,9 +21,9 @@
             <img class="image" />
           </div>
           <div class="right">
-            <div class="temperature">°C</div>
-            <div class="humidity">humidity</div>
-            <div class="wind">wind</div>
+            <div class="temperature"></div>
+            <div class="humidity"></div>
+            <div class="wind"></div>
           </div>
         </div>
       </div>
